fixed company details loading on mobile

--- a/src/app/Index.module.css
+++ b/src/app/Index.module.css
@@ -56,8 +56,7 @@
 
 @media only screen and (max-width: 576px) {
   .benefits {
-    display: block;
-    text-align: center;
+    display: none;
   }
   .hero {
     display: block;
